fix bags slider

--- a/scss/modules/_gallery.scss
+++ b/scss/modules/_gallery.scss
@@ -34,7 +34,7 @@
 		}
 
 		&__firstbox {
-			background: url(/images/gallery/scott-webb-176434.png), no-repeat;
+			background: url(../images/gallery/scott-webb-176434.png), no-repeat;
 			background-size: cover, cover;
 			width: 580px;
 			height: 438px;
