--- a/css/styles.css
+++ b/css/styles.css
@@ -659,7 +659,7 @@ body, html {
 }
 
 .gallery__firstbox {
-  background: url(/images/gallery/scott-webb-176434.png), no-repeat;
+  background: url(../images/gallery/scott-webb-176434.png), no-repeat;
   background-size: cover, cover;
   width: 580px;
   height: 438px;
