--- a/css/styles.css
+++ b/css/styles.css
@@ -380,7 +380,6 @@ body, html {
   background: url(../images/news/city.png), -webkit-gradient(linear, left bottom, left top, from(#3c7fd4), to(#24ccfa));
   background: url(../images/news/city.png), linear-gradient(to top, #3c7fd4, #24ccfa);
   background-size: cover, cover;
-  height: 150vh;
 }
 
 .news__position {
@@ -394,6 +393,7 @@ body, html {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-bottom: 140px;
 }
 
 .news__title {
@@ -659,7 +659,7 @@ body, html {
 }
 
 .gallery__firstbox {
-  background: url(../images/gallery/scott-webb-176434.png), no-repeat;
+  background: url(../images/gallery/scott-webb-176434.png);
   background-size: cover, cover;
   width: 580px;
   height: 438px;
@@ -698,5 +698,141 @@ body, html {
 .gallery__button {
   margin-top: 60px;
   margin-bottom: 140px;
+}
+
+.contact {
+  background-image: url(../images/gallery/scott-webb-176434.png), -webkit-gradient(linear, left bottom, left top, from(#55b7ff), to(#7e5aff));
+  background-image: url(../images/gallery/scott-webb-176434.png), linear-gradient(to top, #55b7ff, #7e5aff);
+  background-size: cover, cover;
+}
+
+.contact__part {
+  margin-left: 6%;
+}
+
+.contact__box {
+  width: 770px;
+  height: 450px;
+  background: url(../images/news/city.png);
+  background-color: #ffffffd8;
+  background-size: cover, cover;
+  -webkit-box-shadow: 0px -4px 30px 0 rgba(133, 133, 133, 0.2);
+          box-shadow: 0px -4px 30px 0 rgba(133, 133, 133, 0.2);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 15%;
+  margin-bottom: 6%;
+}
+
+.contact__title {
+  width: 320px;
+  margin-top: 60px;
+  border-top: 1px solid #2c4058;
+  color: #2c4058;
+  margin-bottom: 8%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.contact__title_text {
+  padding-top: 40px;
+  font-family: Gotham;
+  font-size: 44px;
+  font-weight: 500;
+  line-height: 0.5;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.contact__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.contact__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 1%;
+  margin-bottom: 8%;
+}
+
+.contact__info--text {
+  font-size: 18px;
+  font-family: Gotham;
+  line-height: 1.89;
+  text-align: left;
+  color: #2c4058;
+  text-decoration: none;
+}
+
+.contact__element-top {
+  background: none;
+  border-bottom: 1px solid #2c4058;
+  font-family: Gotham;
+  font-size: 18px;
+  line-height: 1.22;
+  text-align: left;
+  padding-bottom: 4%;
+  margin-bottom: 6%;
+}
+
+.contact__element-bottom {
+  background: none;
+  font-family: Gotham;
+  font-size: 18px;
+  line-height: 1.22;
+  text-align: left;
+  color: rgba(75, 85, 98, 0.5);
+  opacity: 0.7;
+}
+
+.contact__button {
+  background: none;
+  margin-top: 23%;
+  margin-left: 15%;
+  width: 50%;
+  height: 25%;
+}
+
+.contact__button:hover {
+  width: 60%;
+  height: 33%;
+}
+
+.img__element {
+  margin-top: 2%;
+  width: 18px;
+  height: 18px;
+  margin-right: 4%;
+}
+
+.footer {
+  margin-left: 15%;
+  margin-bottom: 15%;
+  padding-bottom: 10%;
+}
+
+.footer__icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer__socials {
+  margin-left: 368px;
 }
 /*# sourceMappingURL=styles.css.map */
