--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,8 @@ body, html {
 .header__info {
   padding-top: 250px;
   text-align: center;
-  font-family: Gotham;
+  font-family: 'GothamBook' !important;
+  text-transform: uppercase;
   color: #ffffff;
 }
 
@@ -156,8 +157,8 @@ body, html {
 
 .navigation__text {
   text-decoration: none;
-  margin-left: 80px;
-  font-family: Gotham;
+  margin-left: 50px;
+  font-family: 'GothamBook' !important;
   font-size: 14px;
   color: #ffffff;
   line-height: 1.57;
@@ -166,7 +167,7 @@ body, html {
 
 .navigation__text::before {
   content: '';
-  border: 2px solid white;
+  border: 1px solid white;
   padding-left: 15px;
   width: 5px;
   height: 4px;
@@ -181,17 +182,56 @@ body, html {
 }
 
 .socials {
+  width: 150px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  margin-top: 1%;
 }
 
 .socials__img {
+  margin-right: 10px;
+  margin: 20px;
+}
+
+.socials__img-border {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px solid #fff;
+  border-radius: 100%;
   width: 40px;
   height: 40px;
-  margin-right: 10px;
+  margin-right: 20px;
+}
+
+.socials__img-border:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  background: rgba(255, 255, 255, 0.432);
+}
+
+.socials__img--f {
+  width: 9px;
+  height: 16px;
+}
+
+.socials__img--t {
+  width: 15px;
+  height: 12px;
+}
+
+.socials__img--i {
+  width: 14px;
+  height: 15px;
 }
 
 .about {
@@ -214,8 +254,8 @@ body, html {
 }
 
 .about__top {
-  width: 300px;
-  font-family: Gotham;
+  width: 320px;
+  font-family: 'GothamBook' !important;
   font-size: 44px;
   font-weight: bold;
   line-height: 0.5;
@@ -277,7 +317,7 @@ body, html {
 
 .about__title {
   text-align: left;
-  font-family: Gotham;
+  font-family: 'GothamBook' !important;
   padding-bottom: 40px;
 }
 
@@ -287,14 +327,16 @@ body, html {
   line-height: 0.55;
   font-weight: bold;
   padding-bottom: 20px;
+  text-transform: uppercase;
 }
 
 .about__title__second {
-  width: 356px;
+  width: 470px;
   font-size: 44px;
   color: #2c4058;
   line-height: 0.55;
   font-weight: bold;
+  text-transform: uppercase;
 }
 
 .about__notes {
@@ -318,7 +360,7 @@ body, html {
   border: solid 1px #2c4058;
   color: #2c4058;
   text-transform: uppercase;
-  font-family: Gotham;
+  font-family: 'GothamBook' !important;
   font-size: 14px;
   text-align: center;
   -webkit-transition: 0.5s;
@@ -326,11 +368,11 @@ body, html {
 }
 
 .about__button:hover {
-  width: 220px;
-  height: 60px;
   font-size: 16px;
   background-color: #2c4058;
   color: #ffffff;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .about__button:active {
@@ -397,7 +439,7 @@ body, html {
 }
 
 .news__title {
-  width: 300px;
+  width: 330px;
   margin-top: 140px;
   border-top: 1px solid #fff;
   color: #fff;
@@ -412,7 +454,7 @@ body, html {
 
 .news__title_text {
   padding-top: 40px;
-  font-family: Gotham;
+  font-family: 'GothamBook' !important;
   font-size: 44px;
   font-weight: 500;
   line-height: 0.5;
@@ -440,7 +482,7 @@ body, html {
 }
 
 .news__theme {
-  font-family: Gotham;
+  font-family: 'GothamBook' !important;
   font-size: 22px;
   font-weight: bold;
   line-height: 1.55;
@@ -470,7 +512,7 @@ body, html {
 }
 
 .author__name {
-  font-family: Gotham;
+  font-family: 'GothamBook' !important;
   font-size: 18px;
   line-height: 1.22;
   text-align: left;
@@ -480,7 +522,7 @@ body, html {
 }
 
 .author__date {
-  font-family: Gotham;
+  font-family: 'GothamBook' !important;
   font-size: 14px;
   line-height: 1.57;
   text-align: left;
@@ -595,8 +637,8 @@ body, html {
 }
 
 .slider .slick-dots button:hover {
-  width: 15px;
-  height: 15px;
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
 }
 
 .slider .slick-dots button:active {
@@ -644,7 +686,7 @@ body, html {
 
 .gallery__title_text {
   padding-top: 40px;
-  font-family: Gotham;
+  font-family: 'GothamBook' !important;
   font-size: 44px;
   font-weight: 500;
   line-height: 0.5;
@@ -662,7 +704,7 @@ body, html {
   background: url(../images/gallery/scott-webb-176434.png);
   background-size: cover, cover;
   width: 580px;
-  height: 438px;
+  height: 446px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -680,19 +722,16 @@ body, html {
   display: flex;
 }
 
-.gallery__gallery__box {
+.gallery__box {
+  padding-left: 15px;
   width: 285px;
   height: 438px;
-}
-
-.gallery__gallery__box--left {
-  margin-right: 10px;
 }
 
 .gallery__picture {
   width: 285px;
   height: 214px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .gallery__button {
@@ -701,9 +740,9 @@ body, html {
 }
 
 .contact {
-  background-image: url(../images/gallery/scott-webb-176434.png), -webkit-gradient(linear, left bottom, left top, from(#55b7ff), to(#7e5aff));
-  background-image: url(../images/gallery/scott-webb-176434.png), linear-gradient(to top, #55b7ff, #7e5aff);
+  background: url(../images/gallery/Bg.png) center;
   background-size: cover, cover;
+  position: relative;
 }
 
 .contact__part {
@@ -711,11 +750,11 @@ body, html {
 }
 
 .contact__box {
+  position: absolute;
+  top: -85%;
   width: 770px;
   height: 450px;
-  background: url(../images/news/city.png);
-  background-color: #ffffffd8;
-  background-size: cover, cover;
+  background: url(/images/news/city.png) no-repeat bottom center, #ffffff;
   -webkit-box-shadow: 0px -4px 30px 0 rgba(133, 133, 133, 0.2);
           box-shadow: 0px -4px 30px 0 rgba(133, 133, 133, 0.2);
   display: -webkit-box;
@@ -728,12 +767,12 @@ body, html {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-left: 15%;
+  margin-left: 8%;
   margin-bottom: 6%;
 }
 
 .contact__title {
-  width: 320px;
+  width: 330px;
   margin-top: 60px;
   border-top: 1px solid #2c4058;
   color: #2c4058;
@@ -748,7 +787,7 @@ body, html {
 
 .contact__title_text {
   padding-top: 40px;
-  font-family: Gotham;
+  font-family: 'GothamBook' !important;
   font-size: 44px;
   font-weight: 500;
   line-height: 0.5;
@@ -772,7 +811,7 @@ body, html {
 
 .contact__info--text {
   font-size: 18px;
-  font-family: Gotham;
+  font-family: 'GothamBook' !important;
   line-height: 1.89;
   text-align: left;
   color: #2c4058;
@@ -782,17 +821,19 @@ body, html {
 .contact__element-top {
   background: none;
   border-bottom: 1px solid #2c4058;
-  font-family: Gotham;
+  font-family: 'GothamBook' !important;
   font-size: 18px;
   line-height: 1.22;
   text-align: left;
   padding-bottom: 4%;
-  margin-bottom: 6%;
+  margin-bottom: 8%;
 }
 
 .contact__element-bottom {
   background: none;
-  font-family: Gotham;
+  padding-bottom: 4%;
+  border-bottom: 1px solid rgba(75, 85, 98, 0.5);
+  font-family: 'GothamBook' !important;
   font-size: 18px;
   line-height: 1.22;
   text-align: left;
@@ -809,8 +850,8 @@ body, html {
 }
 
 .contact__button:hover {
-  width: 60%;
-  height: 33%;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .img__element {
@@ -821,9 +862,9 @@ body, html {
 }
 
 .footer {
-  margin-left: 15%;
+  margin-left: 12%;
   margin-bottom: 15%;
-  padding-bottom: 10%;
+  padding-top: 10%;
 }
 
 .footer__icons {
@@ -834,5 +875,29 @@ body, html {
 
 .footer__socials {
   margin-left: 368px;
+}
+
+.footer__info {
+  margin-top: 8%;
+  font-family: 'GothamBook' !important;
+  font-size: 14px;
+  line-height: 1.57;
+  text-align: left;
+  color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer__text-1 {
+  width: 36%;
+  padding-right: 2%;
+  margin-right: 2%;
+  border-right: 1px solid #fff;
+}
+
+.map {
+  width: 100%;
+  height: 100vh;
 }
 /*# sourceMappingURL=styles.css.map */
