--- a/scss/modules/_contact.scss
+++ b/scss/modules/_contact.scss
@@ -1,8 +1,8 @@
 .contact {
-		background-image: url(../images/gallery/scott-webb-176434.png), 
-		linear-gradient(to top, #55b7ff, #7e5aff);
-		
+		background: url(../images/gallery/Bg.png) center;
 		background-size: cover, cover;
+		position: relative;
+	
 
 
 		&__part  {
@@ -10,32 +10,42 @@
 		}
 
 		&__box {
+			position: absolute;
+			top: -85%;
 			width: 770px;
 			height: 450px;
 			
-			background: url(../images/news/city.png);
-			background-color: #ffffffd8;
-			background-size: cover, cover;
+			 
+			
+			background: url(/images/news/city.png) no-repeat bottom center, #ffffff;
 			box-shadow: 0px -4px 30px 0 rgba(133, 133, 133, 0.2);
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			margin-left: 15%;
+			margin-left: 8%;
 			margin-bottom: 6%;
+
+
+			 
+
+			
+			
+			
+			
 		}
 
 		&__title {
-			width: 320px;
-      margin-top: 60px;
-      border-top: 1px solid #2c4058;
-      color: #2c4058;
-      margin-bottom: 8%;
-      display: flex;
+			width: 330px;
+      		margin-top: 60px;
+      		border-top: 1px solid #2c4058;
+      		color: #2c4058;
+      		margin-bottom: 8%;
+      		display: flex;
 			justify-content: center;
 
 			&_text {
 				padding-top: 40px;
-				font-family: Gotham;
+				font-family: 'GothamBook' !important;
 				font-size: 44px;
 				font-weight: 500;
 				line-height: 0.5;
@@ -56,7 +66,7 @@
 
 			&--text {
 				font-size: 18px;
-				font-family: Gotham;
+				font-family: 'GothamBook' !important;
 				line-height: 1.89;
 				text-align: left;
 				color: #2c4058;
@@ -68,17 +78,19 @@
 		&__element-top {
 			background: none;
 			border-bottom: 1px solid #2c4058;
-			font-family: Gotham;
+			font-family: 'GothamBook' !important;
 			font-size: 18px;
 			line-height: 1.22;
 			text-align: left;
 			padding-bottom: 4%;
-			margin-bottom: 6%;
+			margin-bottom: 8%;
 		}
 
 		&__element-bottom {
 			background: none;
-			font-family: Gotham;
+			padding-bottom: 4%;
+			border-bottom: 1px solid rgba(75, 85, 98, 0.5);
+			font-family: 'GothamBook' !important;
 			font-size: 18px;
 			line-height: 1.22;
 			text-align: left;
@@ -94,8 +106,7 @@
 			height: 25%;
 
 			&:hover {
-				width: 60%;
-				height: 33%;
+				transform: scale(1.1);
 			}
 		}
 }
@@ -110,9 +121,10 @@
 }
 
 .footer {
-	margin-left: 15%;
+	
+	margin-left: 12%;
 	margin-bottom: 15%;
-	padding-bottom: 10%;
+	padding-top: 10%;
 
 	&__icons {
 		display: flex;
@@ -121,4 +133,22 @@
 	&__socials {
 		margin-left: 368px;
 	}
+
+	&__info {
+		margin-top: 8%;
+		font-family: 'GothamBook' !important;
+		font-size: 14px;
+		line-height: 1.57;
+		text-align: left;
+		color: #ffffff;
+		 display: flex;
+	}
+
+	&__text-1 {
+		width: 36%;
+		padding-right: 2%;
+		margin-right: 2%;
+		border-right: 1px solid #fff;
+	}
 }
+
