--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -15,7 +15,8 @@
     &__info {
       padding-top: 250px;
       text-align: center;
-      font-family: Gotham;
+      font-family: 'GothamBook' !important;
+      text-transform: uppercase;
       color: #ffffff;
     }
 
@@ -70,8 +71,10 @@
 
     &__text {
       text-decoration: none;
-      margin-left: 80px;
-      font-family: Gotham;
+      margin-left: 50px;
+      font-family: 'GothamBook' !important;
+
+      
       font-size: 14px;
       color: #ffffff;
       line-height: 1.57;
@@ -79,7 +82,7 @@
       
       &::before {
         content: '';
-        border: 2px solid white;
+        border: 1px solid white;
         padding-left: 15px;
         width: 5px;
         height: 4px;
@@ -100,13 +103,47 @@
 }
 
 .socials {
+  width: 150px;
   display: flex;
   justify-content: space-around;
+  margin-top: 1%;
 
   &__img {
-    width: 40px;
-    height: 40px;
+    
     margin-right: 10px;
+    margin: 20px;
+    
+
+    &-border {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: 1px solid #fff;
+      border-radius: 100%;
+      width: 40px;
+      height: 40px;
+      margin-right: 20px;
+
+      &:hover {
+        transform: scale(1.2);
+        background: rgba(255, 255, 255, 0.432);
+      }
+    }
+
+    &--f {
+      width: 9px;
+      height: 16px;
+    }
+
+    &--t {
+      width: 15px;
+      height: 12px;
+    }
+
+    &--i {
+      width: 14px;
+      height: 15px;
+    }
   }
 }
 
